# FlowStorm_Performance

./: .gitignore  README.md  docker-compose.yml  locust-load-testing.code-workspace  locust.conf  pyproject.toml  run_locust.py
docker/: Dockerfile.locust-master  Dockerfile.locust-worker
src/: config.py  locustfile.py  run_locust_customised.py
src/locust_tests/LocustTrial/: example.py  run-locust.py  user_profile.py
src/locust_tests/helpers/: api.py  orgs.py
src/locust_tests/user_classes/: BasicFlowUser.py  LongConversationUser.py  PartialFlowUser.py
src/server/: __init__.py  analytic_track_event.py  chat_sessions.py  next_responses.py  next_suggestions.py  org.py  org_config.py  org_configs.py  session_messages.py  supported_event.py
